Fixed Menu z-index

--- a/client/src/components/Menu/Menu.scss
+++ b/client/src/components/Menu/Menu.scss
@@ -11,7 +11,7 @@
 
     // Positioning
     position: fixed;
-    z-index: 3;
+    z-index: 5;
 
     // Display
     display: flex;
