--- a/client/src/components/Topbar/Topbar.scss
+++ b/client/src/components/Topbar/Topbar.scss
@@ -8,7 +8,7 @@
 
     // Positioning 
     position: fixed;
-    z-index: 2;
+    z-index: 5;
 
     // Display
     display: flex;
